2008-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-set-charset-parameters): Add new argument
	`charset'; fix name of function called recursively.
	(gnus-mime-view-part-as-charset): Don't bind gnus-newsgroup-charset.

2008-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-strip-charset-parameters): Remove.
	(gnus-mime-set-charset-parameters): New function.
	(gnus-mime-view-part-as-charset): Use it to correctly display part
	specifying wrong charset.

2008-09-08  David Engster  <dengste@eml.cc>

	* nnmairix.el (nnmairix-create-server-and-default-group): Require match
	in completing-read for back end server.

2008-09-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* message.el (message-confirm-send): New variable to confirm sending a
	message.
	(message-send): Use it.

2008-08-30  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-spec.el (gnus-parse-simple-format): Revert last patch.

2008-08-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-spec.el (gnus-parse-simple-format): Remove trailing whitespace.

2008-08-21  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-max-track-groups): New variable to
	prevent tracking too many groups.
	(gnus-registry-split-fancy-with-parent, gnus-registry-fetch-groups):
	Use it.

2008-08-11  Ralf Angeli  <angeli@caeruleus.net>

	* gnus-art.el (gnus-article-next-page): Respect `scroll-margin' when
	moving point to the bottom of the window in order to avoid recentering.

2008-08-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-next-page, gnus-article-prev-page)
	(gnus-article-next-page-1): Use compiler directive (featurep 'xemacs).
	(gnus-article-beginning-of-window): Fix calculation.

2008-08-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-summary-supersede-article)
	(gnus-summary-resend-message-edit): Bind mail-parse-charset to the
	value of gnus-newsgroup-charset to decode non-MIME encoded text in
	message header.
